fix: [CVNG-4076]: remove jumping of timeline on slider move

--- a/src/modules/85-cv/components/ChangeTimeline/components/TimelineRow/components/TimelineRowLoading.module.scss
+++ b/src/modules/85-cv/components/ChangeTimeline/components/TimelineRow/components/TimelineRowLoading.module.scss
@@ -1,4 +1,4 @@
 .loadingContainer {
   width: 100% !important;
-  min-height: 18px;
+  min-height: 16px;
 }
